--- a/_data/data.yml
+++ b/_data/data.yml
@@ -12,11 +12,11 @@ sidebar:
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
+    email: iulian@cios.ro
     phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    github: sharu725
+    website: cios.ro #do not add http://
+    linkedin: iciocoiu
+    github: iciocoiu
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
