--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,7 +8,7 @@ sidebar:
 
     # Profile information
     name: Iulian Ciocoiu
-    tagline: Software Engineer
+    tagline: Computer Engineer
     avatar: iulian-ciocoiu.jpeg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
@@ -63,7 +63,7 @@ education:
       #     - Bullet point
       #     - Bullet point
 experiences:
-    - role: Support Engineer
+    - role: Computer Engineer
       time: 2018 - Present
       company: Luxoft, Bucharest
       details: |
