--- a/_data/data.yml
+++ b/_data/data.yml
@@ -93,7 +93,7 @@ experiences:
         - Skills: Spirent Avalanche · Spirent CyberFlood · Spirent Velocity · Cisco Certified Entry Networking Technician (CCENT) · Linux
     - role: Technical Engineer
       time: (1y 2m)2017 - 2018
-      company: AtoS
+      company: AtoS | Bayerische Motoren Werke
       details: |
         - Big Data and Security department - administration and management of High Performance Computing infrastructure for big automotive client.
 projects:
